--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "echarts": "^4.7.0",
     "element-ui": "^2.13.0",
     "lodash": "^4.17.15",
+    "nprogress": "^0.2.0",
     "vue": "^2.6.11",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.1.6",
@@ -23,6 +24,7 @@
     "@vue/cli-plugin-eslint": "^4.2.0",
     "@vue/cli-service": "^4.2.0",
     "babel-eslint": "^10.0.3",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
     "vue-template-compiler": "^2.6.11"
